fix: overflow scroll phone menu (#284)

--- a/src/summersplash2022/index.module.css
+++ b/src/summersplash2022/index.module.css
@@ -25,6 +25,10 @@
   scroll-behavior: smooth;
 }
 
+:global(.body-hidden) .scrollContainer {
+  overflow-y: hidden;
+}
+
 .section1,
 .section2,
 .section3,
